--- a/rapport.tex
+++ b/rapport.tex
@@ -74,11 +74,11 @@
 \subsection{Problèmatique}
 Mansuba est un jeu de plateau , ancêtre de Shtranj , qui a comme but mettre l’autre joueur en situation de mat . 
 Le but de notre projet sera de jouer une partie aléatoire, puis rendre l'algorithme de plus en plus flexible
-et l'orienter finalement vers la victoire. 
+et l'orienter finalement vers la victory. 
 \subsection{Hypothèse et démarches de validation}
 Pour jouer une partie, il faut que le plateau de jeu soit définie au préalable. Le plateau de jeu \textit{board}  étant 
 le binôme monde et relation. 
-Le monde \textit{world} est l’ensemble des cases accessibles par les pions et dont les mouvements seront permis . Chaque case a 
+Le monde \textit{world} est l’set des cases accessibles par les pions et dont les mouvements seront permis . Chaque case a 
 désormais des cases voisines \textit{Neighbors} dans des directions précisé par \lstinline|enum dir_t|.
 \begin{lstlisting}
 enum dir_t {
@@ -155,28 +155,28 @@ Avant d’initialiser une relation on pose dans la structure neighbors comme pre
 \textcolor{purple}{\textsc{(uint\_max , no\_dir)}} et un (0,0) pour le reste. \textcolor{purple}{\textsc{uint\_max}} est définie 
 dans \textcolor{green}{\textit{limits.h}}. La fonction add\_neighbor servira par suite à pousser \textcolor{purple}{\textsc{(uint\_max , no\_dir)}} 
 et le remplacer par le pair indice du voisin et sa direction.
-\subsection{Ensemble}
+\subsection{set}
 \begin{lstlisting}
-struct ensemble{
+struct set{
     unsigned int taille;
     unsigned int positions[WORLD_SIZE];
 };
 \end{lstlisting}
-Cette structure \lstinline|struct ensemble|  permettra de construire des tableaux d’une taille donnée et simplifier leurs 
-manipulations : lecture et écriture , comme le jeu a plusieurs collections à fournir : l’ensemble des positions des pions, la 
+Cette structure \lstinline|struct set|  permettra de construire des tableaux d’une taille donnée et simplifier leurs 
+manipulations : lecture et écriture , comme le jeu a plusieurs collections à fournir : l’set des positions des pions, la 
 collection des mouvement possibles (qui sera le but de l’étape qui suit) ... . Elle contient comme attribut un entier qui donne la 
-taille et un tableau d'indice qui sont le contenu de l'ensemble.
+taille et un tableau d'indice qui sont le contenu de l'set.
 On a défini en plus une fonction qui sera utile pour le reste, add\_position, qui augmente la taille et remplace la position d’indice 
 rentré en paramètre par sa valeur. 
 \begin{lstlisting}
-void add_position(struct ensemble* p ,unsigned int place ){
+void add_position(struct set* p ,unsigned int place ){
     p->positions[p->taille]=place ;
     p->taille+=1;
 }
 \end{lstlisting}
 \section{Mobilités des pièces}
 \subsection{Mobilité d'un pion \textit{PAWN}}
-Pour stocker les mouvements on fera appel à la structure ensemble . Les mouvement possibles dans la version de bases sont :  
+Pour stocker les mouvements on fera appel à la structure set . Les mouvement possibles dans la version de bases sont :  
 
     \textbf{\textcolor{magenta}{Déplacement simple}} : pour les relever il suffit d’utiliser la fonction get\_neighbors pour un indice donné . Ils seront stockés par la fonction \lstinline|void simple_moves( struct game_t game, struct set* sm );|
 
@@ -184,7 +184,7 @@ Pour stocker les mouvements on fera appel à la structure ensemble . Les mouveme
     
     \textbf{\textcolor{magenta}{Saut multiple}} : s’agit d’une suite de saut simple . Cette fonction avait besoin d’une condition d’arrêt pour éviter de boucler infiniment sur les sauts simples autre que les deux voisins soient occupés. Pour cela il nous fallait une fonction qui vérifie l’existence d’un élément dans un set donné \lstinline int place_visited(struct set* ens, unsigned int place );|Elle renvoie un 0 si la place n’est pas encore mentionnée dans l’set qui sera notre condition pour arrêter la recherche. Ils seront stockés par la fonction \lstinline|void multiple_jumps(struct game_t game , struct set* mj )|
 
-Ses fonctions prennent comme paramètre additionnel un ensemble. Il servira comme espace de stockage pour chacune des fonctions au lieu de retourner l’ensemble à la fin de chacune . En plus, la fonction \lstinline|void available_movements(struct game_t game, struct ensemble* am) |fera appel à toutes les fonctions de mouvement citée au-dessus et l’ensemble rentrer comme paramètre dans cette fonction sera le même rentrer dans tous les fonctions pour qu’on puisse stocker tous les mouvements dans un même ensemble.  
+Ses fonctions prennent comme paramètre additionnel un set. Il servira comme espace de stockage pour chacune des fonctions au lieu de retourner l’set à la fin de chacune . En plus, la fonction \lstinline|void available_movements(struct game_t game, struct set* am) |fera appel à toutes les fonctions de mouvement citée au-dessus et l’set rentrer comme paramètre dans cette fonction sera le même rentrer dans tous les fonctions pour qu’on puisse stocker tous les mouvements dans un même set.  
 \subsection{Mobilité des autre pièces \textit{TOWER} et \textit{ELEPHANT }}
 \subsection{Possibilité de capture}
 
@@ -193,12 +193,12 @@ Le monde étant inacessible par d’autre document autre que \textcolor{green}{\
  \lstinline|void world_set(struct world_t* b, unsigned int idx, enum color_t c)| et \lstinline|void world_set_sort(struct world_t* b, unsigned int idx, enum sort_t c)|
  pour donner à un monde initialisé vide des positions pour chacun des pions. Le nombre des pions étant \textcolor{purple}{\textsc{height}}.  
 
-Il existe deux types de victoires. La victoire est dite simple si le joueur atteint une des positions de départ de l’autre joueur
+Il existe deux types de victorys. La victory est dite simple si le joueur atteint une des positions de départ de l’autre joueur
  et complexe si le joueur les atteint tous. En tous cas, on aura besoin de garder la liste de positions de départ des deux joueurs 
  et leurs faire rentrer en paramètre pour pouvoir comparer avec les positions actuelles de l’adversaire. En plus, pour la comparaison on 
  pourra utiliser la fonction place\_visited. 
 
-Le jeu s’arrête si on atteint une victoire, le choix du type étant aléatoire pendant la partie, ou si on atteint \textcolor{purple}{\textsc{max\_turns}}. 
+Le jeu s’arrête si on atteint une victory, le choix du type étant aléatoire pendant la partie, ou si on atteint \textcolor{purple}{\textsc{max\_turns}}. 
 
 Avant d’obtenir la boucle de jeu finale il faudra définir des fonctions qui font des choix aléatoires sur tous les paramètres du jeu. 
 Le choix du pion sera fait par \lstinline|void choose_random_piece_belonging_to(struct game_t* game) |qui retournera un indice. La fonction \lstinline| unsigned int choose_random_move_for_piece(struct game_t game)| va chercher entre les mouvements disponibles pour cet indice et va ensuite choisir un indice auquel le pion va bouger. La fonction \lstinline|void move_piece(struct game_t game, unsigned int dst)| agira sur le monde et échangera l’état de la case à l’indice initial avec celle de l’indice du mouvement. On choisira ainsi aléatoirement le premier joueur à commencer. 
