--- a/rapport.tex
+++ b/rapport.tex
@@ -40,18 +40,20 @@
 \begin{document}
 
 
-%\AddToShipoutPicture{%
- % \AtPageLowerLeft{%
-  %  \rotatebox{90}{\colorbox{gray!20}{%
-   %   \begin{minipage}{\paperheight}\sffamily 
-    %  \hspace*{\stretch{1}} "Projet S5".\hspace*{\stretch{1}}
-     % \end{minipage}%
-   % }}%
- % }%
-%}
+\AddToShipoutPicture{%
+  \AtPageLowerLeft{%
+    \rotatebox{90}{\colorbox{gray!20}{%
+      \begin{minipage}{\paperheight}\sffamily 
+      \hspace*{\stretch{1}} \textbf{Rapport Projet S5: MANSUBA.}\hspace*{\stretch{1}}
+      \end{minipage}%
+    }}%
+  }%
+}
 
-\title{ Enseirb Matmeca \\ Rapport de projet S5 \\ MANSUBA }
-\author{MOHAMMED BOUHAJA ET AMIRA ELOUAZZANI}
+\title{  \includegraphics[scale=0.09]{logo.png} \\ \underline{Rapport de projet S5:} \\ \textbf{MANSUBA} }
+
+
+\author{Réalisé par:\\MOHAMMED BOUHAJA ET AMIRA ELOUAZZANI \\Encadré par: Julien Allali}
 \maketitle
 
 
@@ -65,10 +67,6 @@
 \newpage
 
 
-\begin{center}
-\includegraphics[scale=0.5]{Dessin sans titre.jpg} 
-
-\end{center}
 
 \section{INTRODUCTION}
 \subsection{Problèmatique}
@@ -96,7 +94,18 @@ enum dir_t {
 \end{lstlisting}
 La possibilité d’accès à ses voisins sera contrôlée par la relation de la partie et qui choisira parmis les voisins ceux qui sont
  accessibles par mouvement direct.  
+ 
+ 
+ \begin{center}
+\includegraphics[scale=0.5]{Dessin sans titre.jpg} 
+
+\end{center}
+
 \section{Bases du jeu}
+
+
+
+
 Le jeu s’effectue un monde de $\textcolor{purple}{\textsc{world\_size}} = \textcolor{purple}{\textsc{width}} \times 
  \textcolor{purple}{\textsc{height}}$  case , des pièces (\lstinline|enum sort_t|) pour les joueurs ayant la couleur 
  dans (\lstinline|enum color_t|) . Cette configuration est surtout gouvernée par \textcolor{green}{\textit{geometry.h}}. \\
@@ -130,20 +139,33 @@ struct game_t {
 };
 \end{lstlisting}
 Pour jouer une partie aléatoire on aura besoin de configurer le plateau de jeu.
-\subsubsection{Partie monde}
+\subsection{Partie monde}
 La structure world est un tableau de pair couleur et type de pions qui inaccessible que par des fonctions de 
 \textcolor{green}{\textit{world.h}}. On commence d’abord par initier un monde sans aucun pion à l’aide de la structure 
 \lstinline|struct world_t* world_init();|. Cette fonction attribue à chaque case du tableau monde le pair 
 \textcolor{purple}{\textsc{(no\_color , no\_sort)}}. Les fonctions de world.h permettront l’écriture et la lecture de la couleur et
  du type d’une case donné et seront utilisé fréquemment pour accéder au monde.  
+ 
+ \begin{center}
+ \includegraphics[scale=0.4]{boardvide.png}{\\$\hspace*{0.7cm}$Figure x: Un monde avec 64 cases indexées de 0 à 63.}
+ \end{center}
 
 \subsection{Partie relation}
+
+
+
 La structure \lstinline|struct neighbors_t| prédéfinira les voisins de chaque indice donné . 
 \begin{lstlisting}
 struct neighbors_t {
   struct vector_t n[MAX_NEIGHBORS+1];
 };
 \end{lstlisting}
+
+\begin{center}
+\includegraphics[scale=0.5]{movespawn2.png} {\\$\hspace*{0.7cm}$Figure x: }
+\end{center}
+
+
 Les voisins seront un tableau dont le contenu pour un indice donné est un tableau de vecteur introduit par la structure \lstinline|struct vector_t| défini par l’indice
  du voisin et sa direction de taille \textcolor{purple}{\textsc{max\_neighbors}} . De la même façon que world, les fonctions qui donne 
  accès au voisins sont \lstinline|struct neighbors_t get_neighbors(unsigned int idx)| qui cherche dans la structure des voisins 
@@ -179,10 +201,29 @@ void add_position(struct set* p ,unsigned int place ){
 Pour stocker les mouvements on fera appel à la structure set . Les mouvement possibles dans la version de bases sont :  
 
     \textbf{\textcolor{magenta}{Déplacement simple}} : pour les relever il suffit d’utiliser la fonction get\_neighbors pour un indice donné . Ils seront stockés par la fonction \lstinline|void simple_moves( struct game_t game, struct set* sm );|
+    
+    
+\begin{center}
+\includegraphics[scale=0.5]{movespawn2.png} {\\$\hspace*{0.7cm}$Figure x: Déplacement simple d'un pion.}
+\end{center}
+
+$\newline$
 
     \textbf{\textcolor{magenta}{Saut simple}} : si le voisin dans une direction j est occupé, équivalent d’avoir la fonction get\_neighbor dans la direction j qui a un SORT différent de NO\_SORT, et le voisin du voisin dans la meme direction est libre ,  on peut se déplacer vers le voisin du voisin , si le monde le permet. Ils seront stockés par la fonction \lstinline|void simple_jumps(struct game_t game , struct set* sj);|
     
-    \textbf{\textcolor{magenta}{Saut multiple}} : s’agit d’une suite de saut simple . Cette fonction avait besoin d’une condition d’arrêt pour éviter de boucler infiniment sur les sauts simples autre que les deux voisins soient occupés. Pour cela il nous fallait une fonction qui vérifie l’existence d’un élément dans un set donné \lstinline int place_visited(struct set* ens, unsigned int place );|Elle renvoie un 0 si la place n’est pas encore mentionnée dans l’set qui sera notre condition pour arrêter la recherche. Ils seront stockés par la fonction \lstinline|void multiple_jumps(struct game_t game , struct set* mj )|
+    \begin{center}
+\includegraphics[scale=0.6]{sautf.png} {\\$\hspace*{0.7cm}$Figure x: Saut simple d'un pion.}
+\end{center}
+
+$\newline$
+
+    \textbf{\textcolor{magenta}{Saut multiple}} : s’agit d’une suite de saut simple . Cette fonction avait besoin d’une condition d’arrêt pour éviter de boucler infiniment sur les sauts simples autre que les deux voisins soient occupés. Pour cela il nous fallait une fonction qui vérifie l’existence d’un élément dans un set donné \lstinline| int place_visited(struct set* ens, unsigned int place );|Elle renvoie un 0 si la place n’est pas encore mentionnée dans l’set qui sera notre condition pour arrêter la recherche. Ils seront stockés par la fonction \lstinline|void multiple_jumps(struct game_t game , struct set* mj )|.
+    
+\begin{center}
+\includegraphics[scale=0.6]{sautmf.png} {\\$\hspace*{0.7cm}$Figure x: Saut multiple d'un pion.}
+\end{center}
+
+$\newline$
 
 Ses fonctions prennent comme paramètre additionnel un set. Il servira comme espace de stockage pour chacune des fonctions au lieu de retourner l’set à la fin de chacune . En plus, la fonction \lstinline|void available_movements(struct game_t game, struct set* am) |fera appel à toutes les fonctions de mouvement citée au-dessus et l’set rentrer comme paramètre dans cette fonction sera le même rentrer dans tous les fonctions pour qu’on puisse stocker tous les mouvements dans un même set.  
 \subsection{Mobilité des autre pièces \textit{TOWER} et \textit{ELEPHANT }}
