--- a/rapport.tex
+++ b/rapport.tex
@@ -1,5 +1,4 @@
 \documentclass[a4paper]{article}
-
 \let\proof\relax
 \let\endproof\relax
 \usepackage[utf8]{inputenc}
@@ -17,6 +16,8 @@
 \usepackage{listings}
 \usepackage{booktabs}
 \usepackage{setspace}
+\usepackage{caption}
+\usepackage{subcaption}
 \definecolor{mGreen}{rgb}{0,0.6,0}
 \definecolor{mGray}{rgb}{0.5,0.5,0.5}
 \definecolor{mPurple}{rgb}{0.58,0,0.82}
@@ -37,9 +38,11 @@
 }
 
 \lstset{escapechar=@,style=customc}
-\begin{document}
 
 \onehalfspacing
+
+\begin{document}
+
 
 
 
@@ -192,8 +195,14 @@ dans \textcolor{green}{\textit{limits.h}}. La fonction add\_neighbor servira par
 et le remplacer par le pair indice du voisin et sa direction.
 Le paramètre \textit{seed} permettera de désigner la relation de la partie et sera modifiable à $\sqrt{\textsc{max\_turns}}$. On donne le choix entre 4 relations : simple, diagonale, triangulaire, hexagonal.
 
+\includegraphics[scale=0.5]{Capture d'écran_20230112_214222.png}
+Le passage d'une relation à une relation hexagonal est un peu difficile à gérer puisque l'emplacement des pions n'est pas similaire .  
+
 \subsection{Ensemble}
 \begin{lstlisting}
+\subsection{Ensemble}
+\begin{lstlisting}
+
 struct set{
     unsigned int taille;
     unsigned int positions[WORLD_SIZE];
