--- a/rapport.tex
+++ b/rapport.tex
@@ -73,11 +73,7 @@
 
 
 
-\begin{figure}
-  \includegraphics[width=\linewidth]{Dessin sans titre.jpg}
-  \caption{Graphe des dépendances}
-  \label{fig:length_eight_mouse}
-\end{figure}
+
   
 
 
@@ -108,11 +104,7 @@ enum dir_t {
 La possibilité d’accès à ses voisins sera contrôlée par la relation de la partie et qui choisira parmis les voisins ceux qui sont
  accessibles par mouvement direct.  
  
- 
- \begin{center}
-\includegraphics[scale=0.5]{Dessin sans titre.jpg} 
 
-\end{center}
 
 \section{Bases du jeu}
 
@@ -353,6 +345,14 @@ Il est important de noter que getopt() modifie l'ordre des éléments dans argv 
 
 \section{Références}
 
+
+\section{Annexes}
+
+\begin{figure}
+  \includegraphics[width=\linewidth]{Dessin sans titre.jpg}
+  \caption{Graphe des dépendances}
+  \label{fig:length_eight_mouse}
+\end{figure}
 
 
 \end{document}
